@@ -12,20 +12,21 @@ scene.textures.bumpmap.file = scenes/bump/map2.png
 scene.textures.bumpmap.gamma = 1.0
 scene.textures.bumpmap.mapping.uvscale = 4 -4
 ##
-scene.textures.tex.type = triplanar
-scene.textures.tex.texture1 = bumpmap
-scene.textures.tex.texture2 = bumpmap
-scene.textures.tex.texture3 = bumpmap
-scene.textures.tex.uvindex = 0
-scene.textures.tex.mapping.type = localmapping3d
-##
 scene.textures.scaled_bumpmap.type = scale
-scene.textures.scaled_bumpmap.texture1 = 0.01
-scene.textures.scaled_bumpmap.texture2 = tex
+scene.textures.scaled_bumpmap.texture1 = 0.005
+scene.textures.scaled_bumpmap.texture2 = bumpmap
+##
+scene.textures.tex.type = triplanar
+scene.textures.tex.texture1 = scaled_bumpmap
+scene.textures.tex.texture2 = scaled_bumpmap
+scene.textures.tex.texture3 = scaled_bumpmap
+scene.textures.tex.uvindex = 0
+scene.textures.tex.uvlessbumpmap = 1
+scene.textures.tex.mapping.type = localmapping3d
 ################################################################################
 scene.materials.shell.type = matte
-scene.materials.shell.kd = tex
-#scene.materials.shell.bumptex = scaled_bumpmap
+scene.materials.shell.kd = 0.7 0.7 0.7
+scene.materials.shell.bumptex = tex
 scene.materials.whitematte.type = matte
 scene.materials.whitematte.kd = 0.75 0.75 0.75
 scene.materials.luxtext.type = matte
@@ -44,13 +45,13 @@ scene.objects.room.material = whitematte
 #scene.objects.room.bake.combined.file = room-bake.exr
 #scene.objects.room.bake.combined.gamma = 1.0
 ##
-#scene.objects.luxshell.ply = scenes/luxball/luxball-shell.ply
-#scene.objects.luxshell.material = shell
-#scene.objects.luxshell.appliedtransformation = 0.941364586 -0.329231501 -0.0737521648 0 0.201132208 0.723118901 -0.660791099 0 0.270884842 0.607211411 0.746937573 0 0 0 0 1
-##
-scene.objects.luxshell.ply = scenes/luxball/ellipse.ply
+scene.objects.luxshell.ply = scenes/luxball/luxball-shell.ply
 scene.objects.luxshell.material = shell
-scene.objects.luxshell.appliedtransformation = 0.38976717 0 0 0 0 0.38976717 0 0 0 0 0.0637503564 0 0 0 0.400000006 1
+scene.objects.luxshell.appliedtransformation = 0.941364586 -0.329231501 -0.0737521648 0 0.201132208 0.723118901 -0.660791099 0 0.270884842 0.607211411 0.746937573 0 0 0 0 1
+##
+#scene.objects.luxshell.ply = scenes/luxball/ellipse.ply
+#scene.objects.luxshell.material = shell
+#scene.objects.luxshell.appliedtransformation = 0.38976717 0 0 0 0 0.38976717 0 0 0 0 0.0637503564 0 0 0 0.400000006 1
 ##
 #scene.objects.luxinner.ply = scenes/luxball/luxball-inner.ply
 #scene.objects.luxinner.material = whitematte
